@@ -1,0 +1,21 @@
+/* XPM */
+static char * collapse_xpm[] = {
+"16 16 2 1",
+" 	c None",
+".	c #000000",
+"                ",
+"                ",
+"      .         ",
+"      ..        ",
+"      ...       ",
+"      ....      ",
+"      .....     ",
+"      ......    ",
+"      ......    ",
+"      .....     ",
+"      ....      ",
+"      ...       ",
+"      ..        ",
+"      .         ",
+"                ",
+"                "};
