@@ -3,6 +3,7 @@
 	- Double click activates workspace in window list
 	- Fixes to taskbar layout when only tasks visible
 	- Made network status applets show/hide dynamically again
+	- Add image to taskbar collapse button
 
 1.2.21: 2005-05-31
 
